# PolarCodesUnion

./: README.md
Miroshnik/ecclab/: CMakeLists.txt  Makefile  README.md
Miroshnik/ecclab/common/: srm_utils.c
Miroshnik/ecclab/formats/: format_rho5.h  formats.h
Miroshnik/ecclab/interfaces/: codec.h
Miroshnik/ecclab/polar_scl/: ca_polar_scl_main.c  polar_scl_inner.c  polar_scl_inner.h
Miroshnik/ecclab/simulators/: main_txt.c  sim_bg.c
Miroshnik/ecclab/work/: .bsy  bg_polar08_ca8_CF_k128_L8.spf  bg_polar10_ca8_CF_k512_L8.spf  bg_polar_params.spf  ca_polar_scl_bg  dtrm0_bg  dtrm1_bg  dtrm_glp_bg  tmpoutput.txt
Miroshnik/ecclab/work/GCCmats/: sylvester1.mat  sylvester10.mat  sylvester10inv.mat  sylvester1inv.mat  sylvester2.mat  sylvester2inv.mat  sylvester3.mat  sylvester3inv.mat  sylvester4.mat  sylvester4inv.mat  sylvester5.mat  sylvester5inv.mat  sylvester6.mat  sylvester6inv.mat  sylvester7.mat  sylvester7inv.mat  sylvester7sub1.mat  sylvester7sub2.mat  sylvester7sub3.mat  sylvester7sub4.mat  sylvester8.mat  sylvester8inv.mat  sylvester9.mat  sylvester9inv.mat
Miroshnik/ecclab/work/diff_codes/: bg_polar6_ca6_CF_k32_L8_T10.spf  bg_polar6_ca6_CF_k32_L8_T20.spf  bg_polar7_ca6_CF_k64_L8_T10.spf  bg_polar7_ca6_CF_k64_L8_T20.spf  bg_polar7_ca6_CF_k64_L8_T40.spf  bg_polar9_ca6_CF_k256_L8_T10.spf  bg_polar9_ca6_CF_k256_L8_T20.spf  bg_polar9_ca6_CF_k256_L8_T40.spf  simul_bg_polar10_ca24_CF_k512_L8_T0.spf  simul_bg_polar10_ca24_CF_k512_L8_T10.spf  simul_bg_polar10_ca24_CF_k512_L8_T20.spf  simul_bg_polar10_ca24_CF_k512_L8_T40.spf  simul_bg_polar6_ca6_CF_k32_L8_T0.spf  (+44 more)
(+1159 files in other folders)
